FSD done, added Graphql q

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,6 +9,7 @@
   <script src="script.js"></script>
   <title>UWP Full Stack Assessment</title>
 </head>
+
 <body>
   <div class="title-bar">
     <button class="title-bar__button fetchButton">Fetch Products</button>
@@ -15,7 +17,11 @@
   <main>
 
     <!-- Put your HTML here -->
+    <div id="card-container" class="container">
+
+    </div>
 
   </main>
 </body>
+
 </html>
